# fullerenes

./: .gitignore  .mailmap  CMakeLists.txt  Makefile  README  TODO  TO_FIX  algorithm1.f  fullerene.bak  standalone.cfg  standalone.cls  todo_4.2
benchmarks/: CMakeLists.txt  flatness-compare.cc  forcefield-opt.cc  forcefield-stats.cc  fullerene-optimise-seq.cc  fullerene-optimize-seq.cc  generate_benchmark.cc  isomerspace-dualisation-amortise.cc  isomerspace-dualisation.cc  isomerspace-opt-v0.cc  isomerspace-opt-v1.cc  isomerspace-opt-v2.cc  isomerspace-opt-v3.cc  isomerspace-opt-v4.cc  isomerspace-opt-v5.cc  isomerspace-opt-v6.cc  isomerspace-opt-v7.cc  isomerspace-optimise-par.cc  isomerspace-optimize-par.cc  reduction_benchmark.cc  scan_benchmark.cc
benchmarks/sycl/: CMakeLists.txt  baseline_pipeline.cc  full_pipeline.cc  full_pipeline_strong_scaling.cc  general_dualize.cc  lobpcg-proto.cc  lockstep_dualise.cc  lockstep_dualize.cc  matmul.cc  segmented_reduce.cc  sequential_dualise.cc  sequential_dualize.cc
playground/: CMakeLists.txt  GCnew.cc  Makefile.pybind  buckygen.cc  clustering.cc  coord3d.cc  coprimes.cc  cubic_unfolding.cc  delaunay-2.cc  delaunay-3.cc  delaunay-4.cc  delaunay.cc  det.cc  dual.cc  eisenstein-polygon.cc  eisenstein-polygon2.cc  forcefield-pybind.cc  forcefield.cc  forcefield2.cc  gaudi.cc  general_spiral.cc  gs-article-buckygen.cc  gs-article-examples.cc  gs-article-fix-examples.cc  gs-article-hogfile.cc  gs-article-leapfrog-loop-hog.cc  gs-article-lf-examples.cc  gs-article-loop.cc  gs-article-loop2.cc  gs-article-peel.cc  gs-article-peel2.cc  gs-article-sp.cc  gs-article.cc  gs-article2.cc  halma.cc  ideal_dihedral.cc  indices.cc  latex.cc  layout-opt.cc  perfect-matchings.cc  (+14 more)
programs/: CMakeLists.txt  README  SWlandscape.cc  SWsearch.cc  SWsearch2.cc  SWsearch3.cc  SWsearch4.cc  SWshape.cc  c380-title.cc  convert-to-csv.cc  debug-optimize.cc  density.cc  file-to-file.cc  file-to-pov.cc  file-to-python.cc  file-to-spiral.cc  filter-nanocones.cc  forcefield-animation-data.cc  fullerene-isomers-polyhedra-bg.cc  fullerene-isomers-polyhedra.cc  fullerene-polyhedron.cc  fulleroid.cc  gather-metadata.cc  gaudi.cc  generate-balanced.cc  generate-herd.cc  geodesics.cc  goldberg-coxeter.cc  gs-ex.cc  halma-polyhedron.cc  ih-series.cc  isomerspace-benchmarking.cc  isomerspace-experiment-jonas.cc  isomerspace-experiment.cc  isomerspace-optimise.cc  isomerspace-optimize-pipe.cc  isomerspace-optimize-reference.cc  isomerspace-optimize.cc  isomerspace-statistics.cc  kegle.cc  (+14 more)
spiral-reference/: CMakeLists.txt  README
spiral-reference/libgraph/: CMakeLists.txt  auxiliary.hh  cubicgraph.cc  cubicgraph.hh  fullerenegraph.cc  fullerenegraph.hh  geometry.cc  geometry.hh  graph.cc  graph.hh  layout.cc  planargraph-io.cc  planargraph.cc  planargraph.hh  polyhedron-io.cc  polyhedron.cc  polyhedron.hh  spiral.cc  spiral.hh  triangulation.cc  triangulation.hh
spiral-reference/programs/: CMakeLists.txt  graph-to-gs.cc  gs-examples.cc  gs-to-graph.cc  gs-to-polyhedron.cc  gs-unpack.cc  planarcodes-to-gs.cc
src/c++/: C60ih.cc  CMakeLists.txt  Gradient-james.cc  Gradient.cc  argparser.cc  constants.cc  coord3d.cc  cubicgraph.cc  debug.cc  delaunay.cc  device_io.cc  eigen.cc  eisenstein.cc  fast_dualize.cc  fold.cc  fullerenegraph.cc  geometryc.cc  graph.cc  graph_fortran.cc  host-cubic-graph.cc  isomer_batch.cc  isomerdb.cc  isomerspace-hessian.cc  layout-optimize.cc  layout.cc  node-neighbours.cc  planargraph-io.cc  planargraph.cc  polyhedron-io.cc  polyhedron-optimise.cc  polyhedron-optimize.cc  polyhedron.cc  spiralc.cc  sym-mat.cc  symmetry.cc  triangulation.cc  unfold.cc  y3table.cc
src/cuda/: C170ih.cu  C256ih.cu  C43520ih.cu  C512ih.cu  C60_Opt.cu  C60ih.cu  C60ihs.cu  C680ih.cu  C960ih.cu  CMakeLists.txt  Gradient.cu  auxiliary_cuda_functions.cu  auxiliary_cuda_functions.cuh  batch_queue.cu  benchmark_cuda_forcefield.cu  benchmark_cuda_forcefield_duplicate.cu  benchmark_cuda_shared.cu  benchmark_functions.cu  binning.cu  constants.cu  coord2d.cu  coord2d.cuh  coord3d.cc  coord3d.cu  coord3d.cuh  coord3d_aligned.cu  cu_array.cu  cuda_execution.cu  cuda_io.cu  data_structs.cu  device_cubic_graph.cu  device_deque.cu  device_dual_graph.cu  device_includes.cu  dualise.cu  dualize.cu  eigen.cu  forcefield.cu  forcefield_structs.cu  half4.cu  (+38 more)
src/fortran/: CMakeLists.txt  config.f  coord.f  datain.f  dddihedral_DNR.f  diag.f  geometry.f  hamilton.f  main.f  opt-standalone.f  opt.f  schlegel.f  sphere.f
src/sycl/: CMakeLists.txt  constants.cc  coord3d.cc  cubic-graph.cc  dualise.cc  dualize.cc  eigen.cc  forcefield-includes.cc  forcefield-optimise.cc  forcefield-optimize.cc  geometry-properties.cc  hessian.cc  isomer_batch.hh  kernel.cc  matrix3.cc  sym-mat3.cc  (+10 more)
src/sycl-src/: CMakeLists.txt  dualise.cpp  forcefield-optimise.cpp  forcefield_includes.cpp  matrix3.cpp
tests/: CMakeLists.txt  X0-test-random.cc  X0-test.cc  async-execution-test.cc  async-pipeline-test.cc  basic_pipeline.cc  batch-clear-append-test.cc  buckygen.cc  canonical_general_spiral.cc  dangle.cc  derivatives.f  dual-test.cc  dual.cc  eccentricity-test.cc  eigen-test.cc  eigensolve-special.cc  find-symmetry-elements.cc  general_spiral.cc  geometry.cc  geometry.f  geometry_angle_f.f  geometry_dihedral_f.f  geometry_no_2nd_dihed.f  halma.cc  hamiltoncount.cc  hessian-test.cc  indices.cc  kernel-to-kernel-test.cc  lanczos.py  latex.cc  layout-opt.cc  lobpcg_test.py  minimum-problem.cc  optimize-single-isomer.cc  planarcode.cc  poly.cc  polyhedron.cc  print.cc  produce-figure-data.cc  properties-test.cc  (+18 more)
unit-tests/: CMakeLists.txt  X0-test-random.cc  X0-test.cc  async-execution-test.cc  async-pipeline-test.cc  batch-clear-append-test.cc  copy-test.cc  dual-test.cc  eccentricity-test.cc  eigen-test.cc  generate-x0.cc  generate-xopt.cc  hessian-test.cc  minimum-problem.cc  optimise-single-isomer.cc  produce-figure-data.cc  properties-test.cc  queue-test.cc  race-test.cc  refill-race-test.cc  scan-test.cc  surface-area-test.cc  tutte-test-random.cc  tutte-test.cc  validity-test.cc  volume-test.cc
(+664 files in other folders)
