if(ENABLE_CUDA)
  find_package(CUDAToolkit REQUIRED)
  link_libraries(fortran_opt fullerenes cuda_lib ${CMAKE_CUDA_LIBS})
  add_executable(isomerspace-dualisation isomerspace-dualisation.cc)
  add_executable(forcefield-stats forcefield-stats.cc)
  add_executable(fullerene-optimise-seq fullerene-optimise-seq.cc)
  add_executable(isomerspace-optimise-par isomerspace-optimise-par.cc)
  add_executable(isomerspace-opt-v0 isomerspace-opt-v0.cc)
  add_executable(isomerspace-opt-v1 isomerspace-opt-v1.cc)
  add_executable(isomerspace-opt-v2 isomerspace-opt-v2.cc)
  add_executable(isomerspace-opt-v3 isomerspace-opt-v3.cc)
  add_executable(isomerspace-opt-v4 isomerspace-opt-v4.cc)
  add_executable(isomerspace-opt-v5 isomerspace-opt-v5.cc)
  add_executable(isomerspace-opt-v6 isomerspace-opt-v6.cc)
  add_executable(isomerspace-opt-v7 isomerspace-opt-v7.cc)
  add_executable(scan_benchmark scan_benchmark.cc)
  add_executable(reduction_benchmark reduction_benchmark.cc)
  add_executable(generate_benchmark generate_benchmark.cc)
  add_executable(forcefield-opt forcefield-opt.cc)
  add_executable(flatness-compare flatness-compare.cc)

  target_link_libraries(isomerspace-dualisation cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(isomerspace-optimise-par cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(forcefield-stats cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(scan_benchmark cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(reduction_benchmark cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(generate_benchmark cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(isomerspace-opt-v0 cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(isomerspace-opt-v1 cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(isomerspace-opt-v2 cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(isomerspace-opt-v3 cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(isomerspace-opt-v4 cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(isomerspace-opt-v5 cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(isomerspace-opt-v6 cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(isomerspace-opt-v7 cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(fullerene-optimise-seq cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(forcefield-opt cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(flatness-compare cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
endif()
