link_libraries(fortran_opt fullerenes)
add_executable(perfect-matchings perfect-matchings.cc)
add_executable(playground-symmetry symmetry.cc)
add_executable(read_polyhedron read_polyhedron.cc)
add_executable(unfold unfold.cc)
add_executable(unfold+3D unfold+3D.cc)
add_executable(clustering clustering.cc)
add_executable(coprimes coprimes.cc)
add_executable(eisenstein-polygon eisenstein-polygon.cc)
