link_libraries(fortran_opt fullerenes)
add_executable(file-to-spiral file-to-spiral.cc)
add_executable(file-to-pov file-to-pov.cc)
add_executable(file-to-file file-to-file.cc)
add_executable(file-to-python file-to-python.cc)
add_executable(spiral-to-polyhedron spiral-to-polyhedron.cc)
add_executable(spiral-to-python spiral-to-python.cc)
add_executable(symmetry symmetry.cc)
add_executable(polyhedron-optimize polyhedron-optimize.cc)
add_executable(halma-polyhedron halma-polyhedron.cc)
add_executable(fullerene-polyhedron fullerene-polyhedron.cc)
add_executable(fullerene-isomers-polyhedra fullerene-isomers-polyhedra.cc)
add_executable(polyhedra-buster polyhedra-buster.cc)
add_executable(filter-nanocones filter-nanocones.cc)
add_executable(kegle kegle.cc)
# add_executable(density density.cc)
# add_executable(rspilist-to-python-and-mol2 rspilist-to-python-and-mol2.cc)
# add_executable(geodesics geodesics.cc)

if(CMAKE_CUDA_COMPILER)
  add_executable(isomerspace-optimize isomerspace-optimize.cc)
  add_executable(isomerspace-optimize-pipe isomerspace-optimize-pipe.cc)
  add_executable(isomerspace-optimize-reference isomerspace-optimize-reference.cc)
  target_link_libraries(isomerspace-optimize cuda_lib)
  target_link_libraries(isomerspace-optimize-pipe cuda_lib)
  target_link_libraries(isomerspace-optimize-reference cuda_lib)
endif()
