link_libraries(fortran_opt fullerenes)

if(CMAKE_CUDA_COMPILER)
  add_executable(tutte-kernel-test tutte-kernel-test.cc)
  add_executable(queue-test queue-test.cc)
  add_executable(X0-kernel-test X0-kernel-test.cc)
  add_executable(kernel-to-kernel-test kernel-to-kernel-test.cc)
  add_executable(tutte-to-X0-test tutte-to-X0-test.cc)
  target_link_libraries(tutte-kernel-test cuda_lib)
  target_link_libraries(X0-kernel-test cuda_lib)
  target_link_libraries(kernel-to-kernel-test cuda_lib)
  target_link_libraries(tutte-to-X0-test cuda_lib)
  target_link_libraries(queue-test cuda_lib fullerenes)
endif()
