if(CMAKE_CUDA_COMPILER)
  find_package(CUDAToolkit REQUIRED)
  link_libraries(fortran_opt fullerenes cuda_lib ${CMAKE_CUDA_LIBS})
  add_executable(batch-clear-append-test batch-clear-append-test.cc)
  add_executable(async-execution-test async-execution-test.cc)
  add_executable(validity-test validity-test.cc)
  add_executable(race-test race-test.cc)
  add_executable(dual-test dual-test.cc)
  add_executable(tutte-test tutte-test.cc)
  add_executable(tutte-test-random tutte-test-random.cc)
  add_executable(X0-test X0-test.cc)
  add_executable(X0-test-random X0-test-random.cc)
  add_executable(refill-race-test refill-race-test.cc)
  add_executable(scan-test scan-test.cc)
  add_executable(async-pipeline-test async-pipeline-test.cc)
  add_executable(eigen-test eigen-test.cc)
  add_executable(produce-figure-data produce-figure-data.cc)
  add_executable(queue-test queue-test.cc)
  add_executable(properties-test properties-test.cc)
  add_executable(volume-test volume-test.cc)
  add_executable(surface-area-test surface-area-test.cc)
  add_executable(eccentricity-test eccentricity-test.cc)
  add_executable(minimum-problem minimum-problem.cc)

  if(CUSOLVER_LIBRARY)
    add_executable(hessian-test hessian-test.cc)
    target_link_libraries(hessian-test cuda_lib fullerenes  ${CMAKE_CUDA_LIBS})
  endif()  

  target_link_libraries(batch-clear-append-test cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(refill-race-test fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(scan-test cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(async-pipeline-test cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(eigen-test cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(produce-figure-data cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(queue-test cuda_lib fullerenes ${CMAKE_CUDA_LIBS})
  target_link_libraries(properties-test cuda_lib fullerenes  ${CMAKE_CUDA_LIBS})
  target_link_libraries(volume-test cuda_lib fullerenes  ${CMAKE_CUDA_LIBS})
  target_link_libraries(surface-area-test cuda_lib fullerenes  ${CMAKE_CUDA_LIBS})
  target_link_libraries(eccentricity-test cuda_lib fullerenes  ${CMAKE_CUDA_LIBS})
  target_link_libraries(minimum-problem cuda_lib fullerenes  ${CMAKE_CUDA_LIBS})
endif()
