enable_language(CXX CUDA)
set_source_files_properties(tutte.cu PROPERTIES COMPILE_FLAGS                "$(CMAKE_CUDA_FLAGS) --maxrregcount=40")
set_source_files_properties(dualise.cu PROPERTIES COMPILE_FLAGS              "$(CMAKE_CUDA_FLAGS) --maxrregcount=40")
set_source_files_properties(benchmark_functions.cu PROPERTIES COMPILE_FLAGS  "$(CMAKE_CUDA_FLAGS) --maxrregcount=40")
set_source_files_properties(eigen.cu PROPERTIES COMPILE_FLAGS                "$(CMAKE_CUDA_FLAGS) --maxrregcount=48")
set_source_files_properties(hessian.cu PROPERTIES COMPILE_FLAGS              "$(CMAKE_CUDA_FLAGS) --maxrregcount=0" )
set_source_files_properties(properties.cu PROPERTIES COMPILE_FLAGS           "$(CMAKE_CUDA_FLAGS) --maxrregcount=40")
set_source_files_properties(isomer_queue.cu PROPERTIES COMPILE_FLAGS         "$(CMAKE_CUDA_FLAGS) --maxrregcount=40")
set_source_files_properties(spherical_projection.cu PROPERTIES COMPILE_FLAGS "$(CMAKE_CUDA_FLAGS) --maxrregcount=40")
set_source_files_properties(misc_cuda.cu PROPERTIES COMPILE_FLAGS            "$(CMAKE_CUDA_FLAGS) --maxrregcount=40")
set_source_files_properties(cu_array.cu PROPERTIES COMPILE_FLAGS             "$(CMAKE_CUDA_FLAGS) --maxrregcount=40")
set_source_files_properties(forcefield.cu PROPERTIES COMPILE_FLAGS           "$(CMAKE_CUDA_FLAGS) --maxrregcount=80")
set_source_files_properties(binning.cu PROPERTIES COMPILE_FLAGS              "$(CMAKE_CUDA_FLAGS) --maxrregcount=80")
add_library(cuda_lib SHARED isomer_queue.cu cu_array.cu misc_cuda.cu forcefield.cu tutte.cu spherical_projection.cu dualise.cu benchmark_functions.cu eigen.cu hessian.cu properties.cu binning.cu)
set_property(TARGET cuda_lib PROPERTY CUDA_ARCHITECTURES "86")
#set_target_properties(cuda_lib PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
#set_target_properties(cuda_lib PROPERTIES POSITION_INDEPENDENT_CODE ON)
#set_target_properties(cuda_lib PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)

